# TestForge

./: .env.example  .gitignore  .testgen.yaml  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.py
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/analyzer/: __init__.py  (+1 more)
cli/: main.py
docker/: Dockerfile  docker-compose.yml
docs/: HTTPS_SETUP.md  QUICK_HTTPS_GUIDE.md  TestForge-Competitor-Analysis-20260628.md  TestForge-Final-Plan-v1.0-20260628.md  TestForge-Final-Solution-20260628.md  TestForge-v2-Redesign-20260628.md  TestForge-v2.1-Final-Solution-20260628.md  boundary_coverage_report.md  references.md  test-pipeline-optimization-analysis-v2.md  test-pipeline-optimization-analysis.md  test-pipeline-tool-matrix.md
frontend/: .eslintignore  .eslintrc.json  .prettierrc.json  index.html  package-lock.json  package.json  vite.config.ts
scripts/: analyze_boundary_coverage.py  interview_practice.py  launch_server.py  quick_launch.py  run_validation.py  simple_test.py  start_backend.py  start_https_all.bat  start_https_all.py  start_https_server.py  start_server.py  test_coverage_report.py  test_server.py  verify_boundary_tests.py  verify_test_coverage.py
ssl/: create_ssl_cert.py  generate_ssl_cert.bat  generate_ssl_cert.sh
tests/: add_test_marks.py  conftest.py  run_tests.py  test_advanced.py  test_advanced_boundary_cases.py  test_agent_core.py  test_all_scenarios_boundary.py  test_boundary_cases.py  test_core.py  test_e2e_browser_agent.py  test_e2e_integration.py  test_generator.py  test_modules.py
(+136 files in other folders)
