[project]
name = "testforge"
version = "0.1.0"
description = "全类型智能测试平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0",
    "python-multipart>=0.0.20",
    "litellm>=1.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "pyjwt>=2.8.0",
    "reportlab>=4.0",
    "docker>=7.1.0",
    "psutil>=7.0",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "coverage>=7.8.0",
    "black>=24.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
testgen = "cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# 在业务模型类上设置 __test__ = False 即可避免误收集，无需限制 python_classes
